--- a/FQ/Solucoes/Concentracoes.org
+++ b/FQ/Solucoes/Concentracoes.org
@@ -1,16 +1,245 @@
-* Concentrações
+#+LATEX_HEADER: \DeclareExerciseCollection{Concentracoes}
+
+#+begin_comment
+https://edisciplinas.usp.br/pluginfile.php/5225358/mod_resource/content/1/Aula%202-%20Solucoes_laboratorio_QFL1101.pdf
+#+end_comment
+* Densidade
+
+** Densidade (g/mL)
+
+- É a razão entre a massa da solução e o volume da solução.
+  
+#+begin_export latex
+\begin{tcolorbox}[ams equation]
+\mathcal{d}=\frac{m_{\text{massa da solução}}}{V_{\text{solução}}}
+\end{tcolorbox}
+#+end_export
+  
+- Densidade da solução geralmente é expressa em \unit{\gram\per\ml} ou em \unit{\gram\per\cubic\centi\metre}. Nestes casos, para transformá-la em \unit{\gram\per\litre} deve-se multiplica-la por 1000.
 
 
-* Concentração Comum
+* Concentração Comum (g/L)
+  
+** Concentração Comum (g/L)
+
+- A quantidade de soluto dissolvido num dado volume de solução é denominada de concentração
+- É o quociente entre a massa do soluto e o volume da solução
+- Concentração comum é expressa em *g/L* ou *g L$^{-1}$*
+
+  #+begin_export latex
+\begin{tcolorbox}[ams equation]
+\mathcal{C}=\frac{m}{V}
+\end{tcolorbox}
+  #+end_export
+
+
+** Exemplo
+
+#+begin_question
+Qual a massa de cloreto de sódio (NaC$\ell$) necessária para preparar 250 mL de uma solução aquosa de concentração igual a 58,5 \unit{\gram\per\litre}.
+#+end_question
+
+#+ATTR_LATEX: :options [print=true]
+#+begin_answer
+#+begin_export latex
+\begin{tcolorbox}[ams align*]
+\mathcal{C}=& \frac{m_{soluto}}{V_{\text{solu\c{c}\~ao}}} \\
+m_{soluto} = & \mathcal{C} \cdot V(mL)_{\text{solu\c{c}\~ao}}\\
+m_{soluto}= &  58\;\unit{\gram\per\cancel\litre} \cdot 0,25\; \unit{\cancel\litre}\\
+m_{soluto}= & 14,625\; \unit{\gram}
+\end{tcolorbox}
+#+end_export
+#+end_answer
+
+
+* Concentração molar $\mathcal{M}$ (mol/L)
+
+** Concentração molar $\mathcal{M}$ (mol/L)
+
++ Expressa o número de moles do soluto em 1L de solução, sua unidade é *mol/L* ou *\unit{\mole\per\liter}*.
++ A molaridade exprime também o número de milimoles (mmol ou \num{e-3} mol) de um soluto por mililitro (mL ou \num{e-3} L) de solução.
+
+  #+begin_export latex
+\begin{tcolorbox}[ams equation]
+\mathcal{M}=\frac{n_{moles\; soluto}}{V_{\text{solu\c{c}\~ao}}} \Longrightarrow \mathcal{M}=\frac{n_{mmol\; soluto}}{V(mL)_{\text{solu\c{c}\~ao}}}
+\end{tcolorbox}
+#+end_export
+
++ Se soubermos a massa do soluto e o volume de solução, podemos calcular a concentração molar.
+  
+#+begin_export latex
+\begin{tcolorbox}[ams align]
+\mathcal{M}=\frac{m_{\rm massa\; soluto}}{MM_{massa\;molar} \cdot V_{\text{ solu\c{c}\~ao}}}
+\end{tcolorbox}
+#+end_export
+
+** Exemplo
+
+#+begin_question
+Encontrar a molaridade de uma solução aquosa que contém 2,30 g de álcool
+etílico (EtOH; \ch{C2H5OH}) (MM = 46,07 \unit{\gram\per\mole}) em 3,50 L.
+#+end_question
+
+#+LATEX: \visible<1->{
+
+#+ATTR_LATEX: :options [print=true]
+#+begin_answer
+#+begin_export latex
+\begin{tcolorbox}[ams align*]
+\mathcal{M}=& \frac{m_{\rm massa\; soluto}}{MM_{massa\;molar} \cdot V_{\text{ solu\c{c}\~ao}}}\\
+\mathcal{M}=& \frac{2,3}{46,07\cdot 3,5}\\
+\mathcal{M}=& 0,0143\; \unit{\mol\per\litre}
+\end{tcolorbox}
+#+end_export
+
+#+end_answer
+#+LATEX: }
+
+
+* Concentração de íons
+
+** Concentração de íons
+
+- Conhecendo-se a molaridade de uma solução aquosa de um soluto que sofre ionização ou dissociação iônica, pode-se calcular as molaridade dos íons presentes na referida solução.
+
+#+begin_export latex
+\begin{reactions*}
+NaBr -> Na^+ + Br^- \\
+MgF2 -> Mg^{+2} + 2 F^-\\
+A$\ell$2S3 -> 2 A$\ell$^{+3} + 3 S^{-2}
+\end{reactions*}
+#+end_export
+
+
+** Exemplo
+
+#+begin_question
+\small
+Determine as concentrações molares dos íons @@latex: \ch{Ca^{+2}}@@ e \ch{C$\ell$^-} presentes em uma solução aquosa 0,5 \unit{\mol\per\litre} de cloreto de cálcio, sabendo-se que este sal está 100% dissociado.
+#+end_question
+
+#+ATTR_LATEX: :options [print=true]
+#+begin_answer
+\scriptsize
+#+begin_export latex
+\begin{reactions*}
+1 CaC$\ell$2 & -> & 1 Ca^{+2} &\qquad  \;  +  & 2 C$\ell$^-\\
+1 mol & & 1 mol & & 2 mols
+\end{reactions*}
+#+end_export
+
+Na dissociação do cloreto de cálcio, observamos que 1 mol de \ch{CaC$\ell$2} fornece 1 mol de @@latex: \ch{Ca^{+2}}@@ e 2 mols de \ch{C$\ell$^-}. Sendo a solução de \ch{CaC$\ell$2} 0,5 molar, conclui-se que as molaridades dos íons são:
+
+
+#+begin_export latex
+\begin{reactions*}
+1 CaC$\ell$2 & -> & 1 Ca^{+2} &\qquad \;  +  & 2 C$\ell$^-\\
+0,5 \unit{\mol\per\litre} & & 0,5 \unit{\mol\per\litre} & & 1,0 \unit{\mol\per\litre}
+\end{reactions*}
+#+end_export
+
+
+#+end_answer 
+
+
+* Relação massa x volume
+
+** Relação massa x volume 
+
+#+begin_export latex
+\begin{tcolorbox}[ams align]
+\%(m/v)=\frac{m}{v_{total}}\cdot 100\% & \quad \text{massa por volume}\\
+\%(m/m)= \frac{m}{m_{total}}\cdot 100\% & \quad \text{massa por massa total}\\
+\%(v/v)= \frac{v}{v_{total}}\cdot 100\% & \quad \text{volume por volume}
+\end{tcolorbox}
+#+end_export
+
+
+* Diluição de Soluções
+** Diluição de Soluções
+
+- As soluções concentradas também podem ser misturadas com solventes para torná-las diluídas.
+- Em diluições a quantidade de solvente é que aumenta e a quantidade de soluto permanece sempre constante. Assim, o número inicial de mols do soluto é igual ao número de mols do soluto no final.mols do soluto no final.
+
+#+begin_export latex
+\begin{tcolorbox}[ams align]
+\mathcal{M}_1 \cdot V_1 = \mathcal{M}_2 \cdot V_2 
+\end{tcolorbox}
+#+end_export
+
+#+ATTR_LATEX: :scale 0.05
+[[../Solucoes/Diluicao.png]]
+
+** Exemplo
+
+
+#+begin_question
+Ao diluir 100 mL de uma solução de concentração igual a 15g/L ao volume final de 150 mL, a nova concentração será?
+#+end_question
+
+#+ATTR_LATEX: :options [print=true]
+#+begin_answer
+#+begin_export latex
+\begin{tcolorbox}[ams align*]
+\mathcal{M}_1 \cdot V_1 = \mathcal{M}_2 \cdot V_2\\
+15 \cdot 100 = \mathcal{M}_2 \cdot 150 \\
+\mathcal{M}_2= 1500/150 \\
+\mathcal{M}_2 = 10 \; \unit{\gram\per\litre}
+\end{tcolorbox}
+#+end_export
+#+end_answer
+
+* Mistura de Soluções
+** Mistura de Soluções
+
+- Ocorre quando uma mistura de soluções de mesmo soluto sem reação química consiste em reunir em um mesmo recipiente duas soluções.
+
+#+begin_export latex
+\begin{tcolorbox}[ams align]
+\mathcal{M}_f= \frac{\mathcal{M}_1 \cdot V_1 + \mathcal{M}_2 \cdot V_2}{V_1 + V_2}
+\end{tcolorbox}
+#+end_export
+
+#+ATTR_LATEX: :scale 0.05
+[[./Mistura_Solucao.png]]
 
 
 
-* Concentração molar
+** Exemplo
+
+#+begin_question
+Se misturarmos 400 mL de uma solução aquosa de NaC$\ell$ 0,2 mol/L com 250 mL de outra solução de NaC$\ell$ 0,4 mol/L, teremos uma nova solução. Qual será a concentração em \unit{\mol\per\litre} da solução final?
+#+end_question
 
 
-* Diluição
+#+ATTR_LATEX: :options [print=true]
+#+begin_answer
+\small
+#+begin_export latex
+\begin{tcolorbox}[ams align]
+\mathcal{M}_f= & \frac{\mathcal{M}_1 \cdot V_1 + \mathcal{M}_2 \cdot V_2}{V_1 + V_2}\\
+\mathcal{M}_f= & \frac{0,2 \cdot 400 + 0,4 \cdot 250}{400 + 250}\\
+\mathcal{M}_f= & \frac{80+100}{650}\\
+\mathcal{M}_f= & 0,27 \unit{\mol\per\litre}
+\end{tcolorbox}
+#+end_export
+
+#+end_answer
 
 
-* Mistura
+** Fim da Aula
 
 
+
+
+#+begin_export latex
+\begin{tikzpicture}
+\node[graduate,sword, minimum size=1cm]{ \bfseries Bons Estudos !!!!};
+\end{tikzpicture}
+\begin{center}
+\begin{tabular}{ccc}
+Download Aula & & \\%Lista de Exercícios \\
+ \qrcode[height=2in]{https://mark.nl.tab.digital/s/8ocJrDKNYRkxmfG} \\ & & %\qrcode[height=2in]{https://mark.nl.tab.digital/s/LQwiRJGiybMj32g}\\
+ \end{tabular}
+ \end{center}
+#+end_export
