--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-% Created 2024-10-13 Sun 18:01
+% Created 2024-10-20 Sun 20:45
 % Intended LaTeX compiler: lualatex
 \documentclass[presentation,professionalfonts,aspectratio=169]{beamer}
                 
@@ -24,6 +24,7 @@
 %%%% FONTS
 %%% XSIM CONFIG BEAMER
 \usepackage{xsim}
+\usepackage{amsmath}
 \usepackage[most]{tcolorbox}
 \usepackage{amssymb}
 \usepackage{fontawesome}
@@ -76,12 +77,15 @@ label-width = 12pt]{choice}[\choice]
 \usepackage[tikz]{bclogo}
 \usetikzlibrary{fit,patterns,shadows.blur,shapes,mindmap}
 \usetikzlibrary{arrows,arrows.meta,decorations.markings,shapes.symbols}
-\usetikzlibrary{decorations.pathreplacing, decorations.pathmorphing,calc,arrows,positioning}
+\usetikzlibrary{decorations.pathreplacing, decorations.pathmorphing,calc,arrows,positioning,snakes}
 \usepackage{tikzpeople}
 \usepackage{qrcode,hyperref}
 \usepackage{upgreek}
 %\usepackage[version=4]{mhchem}
 \usepackage{tabularray}
+%%% PACKAGE PLOT GRAPH
+\usepackage{pgfplots}
+\pgfplotsset{width=10cm,compat=1.9}
 %%% CUSTOM TABLE
 \NewTblrTheme{fancy}{
 \SetTblrStyle{caption-tag}{font=\bfseries,red2}
@@ -138,6 +142,8 @@ fonttitle=\bfseries\sffamily,
 colbacktitle=blue!85!red!60,enhanced,
 attach boxed title to top left={yshift=-3mm,xshift=5mm},
 title=#2,#1}
+\tcbset{colback=yellow!10!white, colframe=red!50!black, highlight math style= {enhanced, %<-- needed for the ’remember’ options
+colframe=red,colback=red!10!white,boxsep=0pt}}
 \definecolor{col1}{HTML}{FF7878}
 \definecolor{col2}{HTML}{51B5F8}
 \definecolor{col3}{HTML}{68E1AA}
@@ -154,15 +160,18 @@ title=#2,#1}
 \definesubmol\nobond{-[,0.2,,,draw=none]\scriptstyle\color{blue}}
 \newcommand{\re}{\hspace{-1cm}}
 \newcommand{\af}{\hspace{2cm}}
+\tikzstyle{mybox} = [draw=red, fill=blue!20, very thick, rectangle, rounded corners, inner sep=10pt, inner ysep=20pt]
+\tikzstyle{fancytitle} =[fill=red, text=white]
 \date{}
 %\usetheme{minflat}
+\DeclareExerciseCollection{Concentracoes}
 \usetheme{minflat}
 \author{Fábio Lima}
 \date{}
-\title{ Isomeria Plana}
+\title{ Soluções}
 \hypersetup{
  pdfauthor={Fábio Lima},
- pdftitle={ Isomeria Plana},
+ pdftitle={ Soluções},
  pdfkeywords={},
  pdfsubject={},
  pdfcreator={Emacs 29.4 (Org mode 9.6.15)}, 
@@ -178,257 +187,289 @@ title=#2,#1}
 \end{frame}
 
 
-\section{Isomeria Plana}
-\label{sec:orgf9b3366}
+\section{Soluções}
+\label{sec:org86ec7c7}
 
+\begin{frame}[label={sec:orge6b6244}]{Soluções}
+\begin{description}
+\item[{Solução:}] é uma mistura homogênea de soluto e solvente
+\item[{Solvente:}] Componente cujo estado físico é preservado.
+\item[{Soluto:}] Dissolvido no solvente
 
-\begin{frame}[label={sec:org61425b8}]{Isomeria Plana}
-\begin{itemize}
-\item Pode ser percebida observando-se a  fórmula estrutural plana dos compostos.
-\item \alert{Isômeros constitucionais} diferem na  maneira com que seus átomos estão  conectados.
-\end{itemize}
+\alert{Observação:} \emph{Se todos os componentes estiverem no mesmo estado físico, o solvente é aquele presente em maior quantidade.}
+\end{description}
 \end{frame}
 
-
-\section{Isomeria de Função}
-\label{sec:org465cb39}
-
-\begin{frame}[allowframebreaks]{Isomeria de Função}
-\begin{itemize}
-\item A diferença entre os isômeros está no grupo funcional.
-\end{itemize}
-
-
-
-\begin{bclogo}[couleur=yellow!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Fórmula Molecular: \ch{C3H6O}}
-
-
-\begin{tblr}
-{
-colspec = {X[c] X[c]},
-colsep = 15mm,
-row{2} = {font=\bfseries, fg=teal},
-}
-\chemname[2ex]{\chemfig{H_3C-\textcolor{red}{C}([2,,,,red]=\textcolor{red}{O})-CH_3}}{Propanona}
-& 
-\chemname{\chemfig{H_3C-CH_2-\textcolor{red}{C}([1,,,,red]=\textcolor{red}{O})([7,,,,red]-\textcolor{red}{H})}}{Propanal} \\
-Cetona & Aldeído \\
-\end{tblr}
-\end{bclogo}
-
-\framebreak
-
-
-
-\begin{bclogo}[couleur=yellow!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Fórmula Molecular:  \ch{C2H6O}}
-
-
-\begin{tblr}
-{
-colspec = {X[c] X[c]},
-colsep = 15mm,
-row{2} = {font=\bfseries, fg=teal},
-}
-\chemname[2ex]{\chemfig{H_3C-CH_2-[0,,,,red]\textcolor{red}{OH}}}{Etanol}
-& 
-\chemname{\chemfig{H_3C-\textcolor{red}{O}-CH_3}}{metóxi-metano} \\
-Álcool & Éter \\
-\end{tblr}
-\end{bclogo}
-\end{frame}
-
-
-
-
-
-\section{Isomeria de cadeia}
-\label{sec:orgf3ee7c9}
-
-\begin{frame}[label={sec:org221f0c5}]{Isomeria de cadeia}
-\begin{itemize}
-\item A diferença entre os isômeros está no tipo de cadeia.
-\item Por exemplo, um isômero é de cadeia aberta e o outro de cadeia fechada, ou um é de cadeia normal e o outro de cadeia ramificada, ou então, um tem cadeia homogênea e o outro possui cadeia heterogênea.
-\end{itemize}
-
-
-
-
-\begin{bclogo}[couleur=yellow!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Fórmula Molecular: \ch{C4H10}}
-
-
-\begin{tblr}
-{
-colspec = {X[c] X[c]},
-colsep = 15mm,
-row{2} = {font=\bfseries, fg=teal},
-}
-\chemname[-2ex]{\chemfig{H_3C-CH([:90]-CH_3)-CH_3}}{Metil-propano}
-& 
-\chemname[-2ex]{\chemfig{H_3C-CH_2-CH_2-CH_3}}{Butano} \\
-Cadeia ramificada & Cadeia normal \\
-\end{tblr}
-\end{bclogo}
-\end{frame}
-
-
-
-
-\section{Isomeria de posição}
-\label{sec:orgc78e6a9}
-
-\begin{frame}[label={sec:org645e445}]{Isomeria de posição}
-\begin{itemize}
-\item A diferença está na posição de uma insaturação, de um grupo funcional, de um heteroátomo ou de um substituinte.
-\end{itemize}
-
-
-
-\begin{bclogo}[couleur=yellow!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Fórmula Molecular: \ch{C4H6}}
-
-
-\begin{tblr}
-{
-colspec = {X[c] X[c]},
-colsep = 15mm,
-row{2} = {font=\bfseries, fg=teal},
-}
-\chemname[-2ex]{\chemfig{HC~[0,,,,red]C-CH_2-CH_3}}{But-1-ino}
-& 
-\chemname[-2ex]{\chemfig{H_3C-C~[0,,,,red]C-CH_3}}{But-2-ino} \\
-Insaturação carbono 1 e 2  & Insaturação carbono 2 e 3 \\
-\end{tblr}
-\end{bclogo}
-\end{frame}
-
-
-
-
-\section{Metameria}
-\label{sec:org1b0108e}
-
-\begin{frame}[label={sec:org479a4aa}]{Metameria}
-\begin{itemize}
-\item É um tipo especial de isomeria de posição, em que a diferença consiste na posição do \alert{heteroátomo}.
-\end{itemize}
-
-
-
-\begin{bclogo}[couleur=yellow!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Fórmula Molecular: \ch{C4H6}}
-
-
-\small{
-\begin{tblr}
-{
-colspec = {X[l] X[r]},
-colsep = 15mm,
-row{2} = {font=\bfseries, fg=teal},
-}
-\chemname[2ex]{\chemfig{H_3C-\textcolor{red}{O}-CH_2-CH_2-CH_3}}{Metoxi-propano}
-& 
-\chemname{\chemfig{H_3C-CH_2-\textcolor{red}{O}-CH_2-CH_3}}{Etoxi-etano} \\
-Insaturação carbono 1 e 2  & Insaturação carbono 2 e 3 \\
-\end{tblr}
-}
-\end{bclogo}
-\end{frame}
-
-
-
-
-\section{Tautomeria}
-\label{sec:org24b81d5}
-
-\begin{frame}[label={sec:orgcbda60b}]{Tautomeria}
-\begin{itemize}
-\item É um tipo especial de isomeria de função, em que os isômeros coexistem em equilíbrio dinâmico em solução.
-\end{itemize}
-
-
-\begin{bclogo}[couleur=yellow!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Tautomeria}
-
-
-\begin{center}
-\small
-\schemestart
-\chemup.
-\subscheme{
-\chemname[-2ex]{\chemfig{H_3C-\textcolor{red}{C}([2,,,,red]=\textcolor{red}{O})-CH_3}}{Propanona}
-\arrow(.mid east--.mid west){<<->}
-\chemname[-2ex]{\chemfig{H_2C=[0,,,,red]\textcolor{red}{C}([2,,,,red]-\textcolor{red}{OH})-CH_3}}{propenol}
-}
-\chemdown\}
-\arrow{0}[-90,0]
-Equilíbrio ceto-enólico
-\schemestop
-
-\vspace{.3cm}
-
-\schemestart
-\chemup.
-\subscheme{
-\chemname[-2ex]{\chemfig{H_3C-\textcolor{red}{C}([1,,,,red]=\textcolor{red}{O})([7,,,,red]-\textcolor{red}{H})}}{Etanal}
-\arrow(.mid east--.mid west){<<->}
-\chemname[-2ex]{\chemfig{H_3C=[0,,,,red]\textcolor{red}{C}-[0,,,,red]\textcolor{red}{OH}}}{Etenol}
-}
-\chemdown\}
-\arrow{0}[-90,0]
-Equilíbrio aldo-enólico
-\schemestop
-\end{center}
-\end{bclogo}
-\end{frame}
-
-\section{Isomeria Geometrica}
-\label{sec:org0eae0e5}
-
-\begin{frame}[label={sec:org3c4b9ad}]{Isomeria Geométrica}
-\begin{itemize}
-\item Conhecida como a isomeria \emph{cis-trans}.
-\item Ocorre em compostos com dupla ligação ou cíclicos .
-\item Compostos com dupla ligação
-\end{itemize}
-\begin{center}
-\begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-1,xscale=1]
-[   oxygen/.style={circle, ball color=red, minimum size=6mm, inner sep=0},
-    hydrogen/.style={circle, ball color=white, minimum size=2.5mm, inner sep=0},
-    carbon/.style={circle, ball color=black!75, minimum size=7mm, inner sep=0}
-]
-\draw   (196.35,141.5) -- (330.17,141.5) -- (272.82,186) -- (139,186) -- cycle ;
-\end{tikzpicture}
-\end{center}
-\end{frame}
-
-
-\begin{frame}[label={sec:org0d34ca6}]{Exemplos}
-\begin{question}
-(\alert{UERJ}) O ácido linoleico, essencial à dieta humana, apresenta a seguinte fórmula estrutural espacial:
-
-%\chemfig{-[:330]-[:30]-[:330]-[:30]-[:330]=[:30]-[:330]-[:30]=[:330]-[:30]%
-%-[:330]-[:30]-[:330]-[:30]-[:330]-[:30]-[:330](=[:30]O)-[:270]H}
-{\scriptsize
+\begin{frame}[label={sec:orgf6a6b7d}]{Solubilidade \emph{versus} Temperatura}
+\begin{columns}
+\begin{column}{0.4\columnwidth}
+\begin{figure}
 \centering 
-\chemfig{OH-[:150,,1](=[:90]O)-[:210]-[:150]-[:210]-[:150]-[:210]-[:150]%
--[:210]-[:150]=[:210]-[:270]-[:210]=[:150]-[:90]-[:150]-[:90]-[:150]-[:90]}
-}
+\begin{tikzpicture}[scale=0.5, transform shape]]
+	\begin{axis}[
+       ylabel=Solubilidade g/g \ch{H2O},
+		xlabel=Temperatura / \si{\celsius},
+		title=Curva de Solubilidade, 
+		legend style={draw=none},
+		legend pos=north west]
+		%% KNO3
+	\addplot[color=red,mark=*] coordinates {
+		(0,13.25)
+		(20,31.66)
+		(40,63.9)
+		(60,109.9)
+		(80,169)
+		(100,245.2)
+	};
+	%%% KI
+	\addplot[color=blue,mark=*] coordinates {
+		(0,127.8)
+		(20,144.51)
+		(40,161)
+		(60,176.2)
+		(80,191.5)
+		(100,208)
+	};
+	%% KClO4
+	\addplot[color=black,mark=*] coordinates {
+		(0,0.76)
+		(20,1.73)
+		(40,3.63)
+		(60,7.18)
+		(80,13.38)
+		(100,22.2)
+	};
+	%% NaCl
+	%35.6	35.8	36.42	37.05	38.05	39.2
+	\addplot[color=green,mark=*] coordinates {
+		(0,35.6)
+		(20,35.8)
+		(40,36.42)
+		(60,37.05)
+		(80,38.05)
+		(100,39.2)
+	};
+	\legend{\ch{KNO3}, KI, \ch{KC$\ell$O4}, \ch{NaC$\ell$}}
+	\end{axis}
+\end{tikzpicture}
+\caption{Curvas de Solubilidade}
+\end{figure}
+\end{column}
 
-Como é possível observar, as ligações duplas presentes nos átomos de carbono 9 e 12 afetam o formato espacial da molécula. As conformações espaciais nessas ligações duplas são denominadas, respectivamente:
+\begin{column}{0.6\columnwidth}
+\begin{itemize}
+\item A solubilidade de uma substância é a quantidade máxima de uma substância que pode ser dissolvida em uma quantidade fixa de solvente a uma determinada temperatura.
+\item A solubilidade de uma substância geralmente aumenta com a temperatura.
+\item As moléculas da substância têm mais energia cinética a temperaturas mais altas, o que torna mais provável que elas colidam com as moléculas do solvente e se dissolvam.
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+\section{Densidade}
+\label{sec:org903cfd5}
 
-\begin{choice}(2)
-\choice cis e cis
-\choice cis e trans
-\choice trans e cis
-\choice trans e trans
-\end{choice}
-\end{question}
+\begin{frame}[label={sec:org92464d9}]{Densidade (g/mL)}
+\begin{itemize}
+\item É a razão entre a massa da solução e o volume da solução.
+\end{itemize}
+
+\begin{tcolorbox}[ams equation]
+\mathcal{d}=\frac{m_{\text{massa da solução}}}{V_{\text{solução}}}
+\end{tcolorbox}
+
+\begin{itemize}
+\item Densidade da solução geralmente é expressa em \unit{\gram\per\ml} ou em \unit{\gram\per\cubic\centi\metre}. Nestes casos, para transformá-la em \unit{\gram\per\litre} deve-se multiplica-la por 1000.
+\end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgc955176}]{}
-\begin{answer}
-Analisando as duas insaturações das moléculas, observa-se que os ligantes não mostrados são átomos de hidrogênio. Em ambas as insaturações, os átomos de hidrogênio estão do mesmo lado da ligação dupla, logo estão em posição \alert{cis}.
 
-\chemfig{OH-[:150,,1](=[:90]O)-[:210]-[:150]-[:210]-[:150]-[:210]-[:150]%
--[:210]-[:150](-[:90]H)=[:210](-[:150]H)-[:270]-[:210](-[:270]H)=[:150](%
--[:210]H)-[:90]-[:150]-[:90]-[:150]-[:90]}
+\section{Concentração Comum (g/L)}
+\label{sec:org0137ded}
+
+\begin{frame}[label={sec:orgd740f99}]{Concentração Comum (g/L)}
+\begin{itemize}
+\item A quantidade de soluto dissolvido num dado volume de solução é denominada de concentração
+\item É o quociente entre a massa do soluto e o volume da solução
+\item Concentração comum é expressa em \alert{g/L} ou \alert{g L\(^{-1}\)}
+
+\begin{tcolorbox}[ams equation]
+\mathcal{C}=\frac{m}{V}
+\end{tcolorbox}
+\end{itemize}
+\end{frame}
+
+
+\begin{frame}[label={sec:org1b216f8}]{Exemplo}
+\begin{question}
+Qual a massa de cloreto de sódio (NaC\(\ell\)) necessária para preparar 250 mL de uma solução aquosa de concentração igual a 58,5 \unit{\gram\per\litre}.
+\end{question}
+
+\begin{answer}[print=true]
+\begin{tcolorbox}[ams align*]
+\mathcal{C}=& \frac{m_{soluto}}{V_{\text{solu\c{c}\~ao}}} \\
+m_{soluto} = & \mathcal{C} \cdot V(mL)_{\text{solu\c{c}\~ao}}\\
+m_{soluto}= &  58\;\unit{\gram\per\cancel\litre} \cdot 0,25\; \unit{\cancel\litre}\\
+m_{soluto}= & 14,625\; \unit{\gram}
+\end{tcolorbox}
+\end{answer}
+\end{frame}
+
+
+\section{Concentração molar \(\mathcal{M}\) (mol/L)}
+\label{sec:org0d40de7}
+
+\begin{frame}[label={sec:org17f154e}]{Concentração molar \(\mathcal{M}\) (mol/L)}
+\begin{itemize}
+\item Expressa o número de moles do soluto em 1L de solução, sua unidade é \alert{mol/L} ou \alert{\unit{\mole\per\liter}}.
+\item A molaridade exprime também o número de milimoles (mmol ou \num{e-3} mol) de um soluto por mililitro (mL ou \num{e-3} L) de solução.
+
+\begin{tcolorbox}[ams equation]
+\mathcal{M}=\frac{n_{moles\; soluto}}{V_{\text{solu\c{c}\~ao}}} \Longrightarrow \mathcal{M}=\frac{n_{mmol\; soluto}}{V(mL)_{\text{solu\c{c}\~ao}}}
+\end{tcolorbox}
+
+\item Se soubermos a massa do soluto e o volume de solução, podemos calcular a concentração molar.
+\end{itemize}
+
+\begin{tcolorbox}[ams align]
+\mathcal{M}=\frac{m_{\rm massa\; soluto}}{MM_{massa\;molar} \cdot V_{\text{ solu\c{c}\~ao}}}
+\end{tcolorbox}
+\end{frame}
+
+\begin{frame}[label={sec:org5fb6eea}]{Exemplo}
+\begin{question}
+Encontrar a molaridade de uma solução aquosa que contém 2,30 g de álcool
+etílico (EtOH; \ch{C2H5OH}) (MM = 46,07 \unit{\gram\per\mole}) em 3,50 L.
+\end{question}
+
+\visible<1->{
+
+\begin{answer}[print=true]
+\begin{tcolorbox}[ams align*]
+\mathcal{M}=& \frac{m_{\rm massa\; soluto}}{MM_{massa\;molar} \cdot V_{\text{ solu\c{c}\~ao}}}\\
+\mathcal{M}=& \frac{2,3}{46,07\cdot 3,5}\\
+\mathcal{M}=& 0,0143\; \unit{\mol\per\litre}
+\end{tcolorbox}
+\end{answer}
+}
+\end{frame}
+
+
+\section{Concentração de íons}
+\label{sec:org17c372b}
+
+\begin{frame}[label={sec:org27891d4}]{Concentração de íons}
+\begin{itemize}
+\item Conhecendo-se a molaridade de uma solução aquosa de um soluto que sofre ionização ou dissociação iônica, pode-se calcular as molaridade dos íons presentes na referida solução.
+\end{itemize}
+
+\begin{reactions*}
+NaBr -> Na^+ + Br^- \\
+MgF2 -> Mg^{+2} + 2 F^-\\
+A$\ell$2S3 -> 2 A$\ell$^{+3} + 3 S^{-2}
+\end{reactions*}
+\end{frame}
+
+
+\begin{frame}[label={sec:orgbb74ee4}]{Exemplo}
+\begin{question}
+\small
+Determine as concentrações molares dos íons  \ch{Ca^{+2}} e \ch{C$\ell$^-} presentes em uma solução aquosa 0,5 \unit{\mol\per\litre} de cloreto de cálcio, sabendo-se que este sal está 100\% dissociado.
+\end{question}
+
+\begin{answer}[print=true]
+\scriptsize
+\begin{reactions*}
+1 CaC$\ell$2 & -> & 1 Ca^{+2} &\qquad  +  & 2 C$\ell$^-\\
+1 mol & & 1 mol & & 2 mols
+\end{reactions*}
+
+Na dissociação do cloreto de cálcio, observamos que 1 mol de \ch{CaC$\ell$2} fornece 1 mol de  \ch{Ca^{+2}} e 2 mols de \ch{C$\ell$^-}. Sendo a solução de \ch{CaC$\ell$2} 0,5 molar, conclui-se que as molaridades dos íons são:
+
+
+\begin{reactions*}
+1 CaC$\ell$2 & -> & 1 Ca^{+2} &\qquad  +  & 2 C$\ell$^-\\
+0,5 \unit{\mol\per\litre} & & 0,5 \unit{\mol\per\litre} & & 1,0 \unit{\mol\per\litre}
+\end{reactions*}
+\end{answer}
+\end{frame}
+
+
+\section{Relação massa x volume}
+\label{sec:org8e1a759}
+
+\begin{frame}[label={sec:orgae17cd4}]{Relação massa x volume}
+\begin{tcolorbox}[ams align]
+\%(m/v)=\frac{m}{v_{total}}\cdot 100\% & \quad \text{massa por volume}\\
+\%(m/m)= \frac{m}{m_{total}}\cdot 100\% & \quad \text{massa por massa total}\\
+\%(v/v)= \frac{v}{v_{total}}\cdot 100\% & \quad \text{volume por volume}
+\end{tcolorbox}
+\end{frame}
+
+
+\section{Diluição de Soluções}
+\label{sec:org426b6c8}
+\begin{frame}[label={sec:orgf2a8a48}]{Diluição de Soluções}
+\begin{itemize}
+\item As soluções concentradas também podem ser misturadas com solventes para torná-las diluídas.
+\item Em diluições a quantidade de solvente é que aumenta e a quantidade de soluto permanece sempre constante. Assim, o número inicial de mols do soluto é igual ao número de mols do soluto no final.mols do soluto no final.
+\end{itemize}
+
+\begin{tcolorbox}[ams align]
+\mathcal{M}_1 \cdot V_1 = \mathcal{M}_2 \cdot V_2 
+\end{tcolorbox}
+
+\begin{center}
+\includegraphics[scale=0.05]{FQ/Solucoes/Diluicao.png}
+\end{center}
+\end{frame}
+
+\begin{frame}[label={sec:orgb826feb}]{Exemplo}
+\begin{question}
+Ao diluir 100 mL de uma solução de concentração igual a 15g/L ao volume final de 150 mL, a nova concentração será?
+\end{question}
+
+\begin{answer}[print=true]
+\begin{tcolorbox}[ams align*]
+\mathcal{M}_1 \cdot V_1 = \mathcal{M}_2 \cdot V_2\\
+15 \cdot 100 = \mathcal{M}_2 \cdot 150 \\
+\mathcal{M}_2= 1500/150 \\
+\mathcal{M}_2 = 10 \; \unit{\gram\per\litre}
+\end{tcolorbox}
+\end{answer}
+\end{frame}
+
+\section{Mistura de Soluções}
+\label{sec:org382dd08}
+\begin{frame}[label={sec:orga82793f}]{Mistura de Soluções}
+\begin{itemize}
+\item Ocorre quando uma mistura de soluções de mesmo soluto sem reação química consiste em reunir em um mesmo recipiente duas soluções.
+\end{itemize}
+
+\begin{tcolorbox}[ams align]
+\mathcal{M}_f= \frac{\mathcal{M}_1 \cdot V_1 + \mathcal{M}_2 \cdot V_2}{V_1 + V_2}
+\end{tcolorbox}
+
+\begin{center}
+\includegraphics[scale=0.05]{FQ/Solucoes/Mistura_Solucao.png}
+\end{center}
+\end{frame}
+
+
+
+\begin{frame}[label={sec:orgbcd1bb4}]{Exemplo}
+\begin{question}
+Se misturarmos 400 mL de uma solução aquosa de NaC\(\ell\) 0,2 mol/L com 250 mL de outra solução de NaC\(\ell\) 0,4 mol/L, teremos uma nova solução. Qual será a concentração em \unit{\mol\per\litre} da solução final?
+\end{question}
+
+
+\begin{answer}[print=true]
+\small
+\begin{tcolorbox}[ams align]
+\mathcal{M}_f= & \frac{\mathcal{M}_1 \cdot V_1 + \mathcal{M}_2 \cdot V_2}{V_1 + V_2}\\
+\mathcal{M}_f= & \frac{0,2 \cdot 400 + 0,4 \cdot 250}{400 + 250}\\
+\mathcal{M}_f= & \frac{80+100}{650}\\
+\mathcal{M}_f= & 0,27 \unit{\mol\per\litre}
+\end{tcolorbox}
 \end{answer}
 \end{frame}
 \end{document}
