--- a/FQ/Solucoes/Concentracoes.org
+++ b/FQ/Solucoes/Concentracoes.org
@@ -102,6 +102,9 @@ etílico (EtOH; \ch{C2H5OH}) (MM = 46,07 \unit{\gram\per\mole}) em 3,50 L.
 
 - Conhecendo-se a molaridade de uma solução aquosa de um soluto que sofre ionização ou dissociação iônica, pode-se calcular as molaridade dos íons presentes na referida solução.
 
+#+ATTR_LATEX: :options [couleur=yellow!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Equação de dissociação}
+#+begin_bclogo
+
 #+begin_export latex
 \begin{reactions*}
 NaBr -> Na^+ + Br^- \\
@@ -110,6 +113,7 @@ A$\ell$2S3 -> 2 A$\ell$^{+3} + 3 S^{-2}
 \end{reactions*}
 #+end_export
 
+#+end_bclogo
 
 ** Exemplo
 
@@ -216,7 +220,7 @@ Se misturarmos 400 mL de uma solução aquosa de NaC$\ell$ 0,2 mol/L com 250 mL 
 #+begin_answer
 \small
 #+begin_export latex
-\begin{tcolorbox}[ams align]
+\begin{tcolorbox}[ams align*]
 \mathcal{M}_f= & \frac{\mathcal{M}_1 \cdot V_1 + \mathcal{M}_2 \cdot V_2}{V_1 + V_2}\\
 \mathcal{M}_f= & \frac{0,2 \cdot 400 + 0,4 \cdot 250}{400 + 250}\\
 \mathcal{M}_f= & \frac{80+100}{650}\\
@@ -238,8 +242,8 @@ Se misturarmos 400 mL de uma solução aquosa de NaC$\ell$ 0,2 mol/L com 250 mL 
 \end{tikzpicture}
 \begin{center}
 \begin{tabular}{ccc}
-Download Aula & & \\%Lista de Exercícios \\
- \qrcode[height=2in]{https://mark.nl.tab.digital/s/8ocJrDKNYRkxmfG} \\ & & %\qrcode[height=2in]{https://mark.nl.tab.digital/s/LQwiRJGiybMj32g}\\
+Download Aula & & \\%Lista de Exercícios
+\qrcode[height=2in]{https://github.com/fabinholima/AulaQuimicaPDF/blob/main/FQ/Solucoes.pdf} \\  %\qrcode[height=2in]{https://mark.nl.tab.digital/s/LQwiRJGiybMj32g}\\
  \end{tabular}
  \end{center}
 #+end_export
