--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-% Created 2024-10-20 Sun 20:45
+% Created 2024-10-20 Sun 21:02
 % Intended LaTeX compiler: lualatex
 \documentclass[presentation,professionalfonts,aspectratio=169]{beamer}
                 
@@ -188,9 +188,9 @@ colframe=red,colback=red!10!white,boxsep=0pt}}
 
 
 \section{Soluções}
-\label{sec:org86ec7c7}
+\label{sec:org5ece32a}
 
-\begin{frame}[label={sec:orge6b6244}]{Soluções}
+\begin{frame}[label={sec:orgab80f7e}]{Soluções}
 \begin{description}
 \item[{Solução:}] é uma mistura homogênea de soluto e solvente
 \item[{Solvente:}] Componente cujo estado físico é preservado.
@@ -200,7 +200,7 @@ colframe=red,colback=red!10!white,boxsep=0pt}}
 \end{description}
 \end{frame}
 
-\begin{frame}[label={sec:orgf6a6b7d}]{Solubilidade \emph{versus} Temperatura}
+\begin{frame}[label={sec:orgeb2cd50}]{Solubilidade \emph{versus} Temperatura}
 \begin{columns}
 \begin{column}{0.4\columnwidth}
 \begin{figure}
@@ -266,9 +266,9 @@ colframe=red,colback=red!10!white,boxsep=0pt}}
 \end{columns}
 \end{frame}
 \section{Densidade}
-\label{sec:org903cfd5}
+\label{sec:org2e0bdef}
 
-\begin{frame}[label={sec:org92464d9}]{Densidade (g/mL)}
+\begin{frame}[label={sec:org2e43eee}]{Densidade (g/mL)}
 \begin{itemize}
 \item É a razão entre a massa da solução e o volume da solução.
 \end{itemize}
@@ -284,9 +284,9 @@ colframe=red,colback=red!10!white,boxsep=0pt}}
 
 
 \section{Concentração Comum (g/L)}
-\label{sec:org0137ded}
+\label{sec:org2708fee}
 
-\begin{frame}[label={sec:orgd740f99}]{Concentração Comum (g/L)}
+\begin{frame}[label={sec:org4e4d2a1}]{Concentração Comum (g/L)}
 \begin{itemize}
 \item A quantidade de soluto dissolvido num dado volume de solução é denominada de concentração
 \item É o quociente entre a massa do soluto e o volume da solução
@@ -299,7 +299,7 @@ colframe=red,colback=red!10!white,boxsep=0pt}}
 \end{frame}
 
 
-\begin{frame}[label={sec:org1b216f8}]{Exemplo}
+\begin{frame}[label={sec:orgf8ee097}]{Exemplo}
 \begin{question}
 Qual a massa de cloreto de sódio (NaC\(\ell\)) necessária para preparar 250 mL de uma solução aquosa de concentração igual a 58,5 \unit{\gram\per\litre}.
 \end{question}
@@ -316,9 +316,9 @@ m_{soluto}= & 14,625\; \unit{\gram}
 
 
 \section{Concentração molar \(\mathcal{M}\) (mol/L)}
-\label{sec:org0d40de7}
+\label{sec:org69253a1}
 
-\begin{frame}[label={sec:org17f154e}]{Concentração molar \(\mathcal{M}\) (mol/L)}
+\begin{frame}[label={sec:org992c6d6}]{Concentração molar \(\mathcal{M}\) (mol/L)}
 \begin{itemize}
 \item Expressa o número de moles do soluto em 1L de solução, sua unidade é \alert{mol/L} ou \alert{\unit{\mole\per\liter}}.
 \item A molaridade exprime também o número de milimoles (mmol ou \num{e-3} mol) de um soluto por mililitro (mL ou \num{e-3} L) de solução.
@@ -335,7 +335,7 @@ m_{soluto}= & 14,625\; \unit{\gram}
 \end{tcolorbox}
 \end{frame}
 
-\begin{frame}[label={sec:org5fb6eea}]{Exemplo}
+\begin{frame}[label={sec:orge768519}]{Exemplo}
 \begin{question}
 Encontrar a molaridade de uma solução aquosa que contém 2,30 g de álcool
 etílico (EtOH; \ch{C2H5OH}) (MM = 46,07 \unit{\gram\per\mole}) em 3,50 L.
@@ -355,22 +355,25 @@ etílico (EtOH; \ch{C2H5OH}) (MM = 46,07 \unit{\gram\per\mole}) em 3,50 L.
 
 
 \section{Concentração de íons}
-\label{sec:org17c372b}
+\label{sec:org4ba41a0}
 
-\begin{frame}[label={sec:org27891d4}]{Concentração de íons}
+\begin{frame}[label={sec:orgc63cdda}]{Concentração de íons}
 \begin{itemize}
 \item Conhecendo-se a molaridade de uma solução aquosa de um soluto que sofre ionização ou dissociação iônica, pode-se calcular as molaridade dos íons presentes na referida solução.
 \end{itemize}
+
+\begin{bclogo}[couleur=yellow!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Equação de dissociação}
+
 
 \begin{reactions*}
 NaBr -> Na^+ + Br^- \\
 MgF2 -> Mg^{+2} + 2 F^-\\
 A$\ell$2S3 -> 2 A$\ell$^{+3} + 3 S^{-2}
 \end{reactions*}
+\end{bclogo}
 \end{frame}
 
-
-\begin{frame}[label={sec:orgbb74ee4}]{Exemplo}
+\begin{frame}[label={sec:orge441f2d}]{Exemplo}
 \begin{question}
 \small
 Determine as concentrações molares dos íons  \ch{Ca^{+2}} e \ch{C$\ell$^-} presentes em uma solução aquosa 0,5 \unit{\mol\per\litre} de cloreto de cálcio, sabendo-se que este sal está 100\% dissociado.
@@ -379,7 +382,7 @@ Determine as concentrações molares dos íons  \ch{Ca^{+2}} e \ch{C$\ell$^-} pr
 \begin{answer}[print=true]
 \scriptsize
 \begin{reactions*}
-1 CaC$\ell$2 & -> & 1 Ca^{+2} &\qquad  +  & 2 C$\ell$^-\\
+1 CaC$\ell$2 & -> & 1 Ca^{+2} &\qquad  \;  +  & 2 C$\ell$^-\\
 1 mol & & 1 mol & & 2 mols
 \end{reactions*}
 
@@ -387,7 +390,7 @@ Na dissociação do cloreto de cálcio, observamos que 1 mol de \ch{CaC$\ell$2} 
 
 
 \begin{reactions*}
-1 CaC$\ell$2 & -> & 1 Ca^{+2} &\qquad  +  & 2 C$\ell$^-\\
+1 CaC$\ell$2 & -> & 1 Ca^{+2} &\qquad \;  +  & 2 C$\ell$^-\\
 0,5 \unit{\mol\per\litre} & & 0,5 \unit{\mol\per\litre} & & 1,0 \unit{\mol\per\litre}
 \end{reactions*}
 \end{answer}
@@ -395,9 +398,9 @@ Na dissociação do cloreto de cálcio, observamos que 1 mol de \ch{CaC$\ell$2} 
 
 
 \section{Relação massa x volume}
-\label{sec:org8e1a759}
+\label{sec:org8fb1ad9}
 
-\begin{frame}[label={sec:orgae17cd4}]{Relação massa x volume}
+\begin{frame}[label={sec:orga443b57}]{Relação massa x volume}
 \begin{tcolorbox}[ams align]
 \%(m/v)=\frac{m}{v_{total}}\cdot 100\% & \quad \text{massa por volume}\\
 \%(m/m)= \frac{m}{m_{total}}\cdot 100\% & \quad \text{massa por massa total}\\
@@ -407,8 +410,8 @@ Na dissociação do cloreto de cálcio, observamos que 1 mol de \ch{CaC$\ell$2} 
 
 
 \section{Diluição de Soluções}
-\label{sec:org426b6c8}
-\begin{frame}[label={sec:orgf2a8a48}]{Diluição de Soluções}
+\label{sec:org20444e1}
+\begin{frame}[label={sec:orgfc9a2c7}]{Diluição de Soluções}
 \begin{itemize}
 \item As soluções concentradas também podem ser misturadas com solventes para torná-las diluídas.
 \item Em diluições a quantidade de solvente é que aumenta e a quantidade de soluto permanece sempre constante. Assim, o número inicial de mols do soluto é igual ao número de mols do soluto no final.mols do soluto no final.
@@ -423,7 +426,7 @@ Na dissociação do cloreto de cálcio, observamos que 1 mol de \ch{CaC$\ell$2} 
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgb826feb}]{Exemplo}
+\begin{frame}[label={sec:org653554f}]{Exemplo}
 \begin{question}
 Ao diluir 100 mL de uma solução de concentração igual a 15g/L ao volume final de 150 mL, a nova concentração será?
 \end{question}
@@ -439,8 +442,8 @@ Ao diluir 100 mL de uma solução de concentração igual a 15g/L ao volume fina
 \end{frame}
 
 \section{Mistura de Soluções}
-\label{sec:org382dd08}
-\begin{frame}[label={sec:orga82793f}]{Mistura de Soluções}
+\label{sec:orga628cc8}
+\begin{frame}[label={sec:org5e14282}]{Mistura de Soluções}
 \begin{itemize}
 \item Ocorre quando uma mistura de soluções de mesmo soluto sem reação química consiste em reunir em um mesmo recipiente duas soluções.
 \end{itemize}
@@ -456,7 +459,7 @@ Ao diluir 100 mL de uma solução de concentração igual a 15g/L ao volume fina
 
 
 
-\begin{frame}[label={sec:orgbcd1bb4}]{Exemplo}
+\begin{frame}[label={sec:org5118850}]{Exemplo}
 \begin{question}
 Se misturarmos 400 mL de uma solução aquosa de NaC\(\ell\) 0,2 mol/L com 250 mL de outra solução de NaC\(\ell\) 0,4 mol/L, teremos uma nova solução. Qual será a concentração em \unit{\mol\per\litre} da solução final?
 \end{question}
@@ -464,12 +467,25 @@ Se misturarmos 400 mL de uma solução aquosa de NaC\(\ell\) 0,2 mol/L com 250 m
 
 \begin{answer}[print=true]
 \small
-\begin{tcolorbox}[ams align]
+\begin{tcolorbox}[ams align*]
 \mathcal{M}_f= & \frac{\mathcal{M}_1 \cdot V_1 + \mathcal{M}_2 \cdot V_2}{V_1 + V_2}\\
 \mathcal{M}_f= & \frac{0,2 \cdot 400 + 0,4 \cdot 250}{400 + 250}\\
 \mathcal{M}_f= & \frac{80+100}{650}\\
 \mathcal{M}_f= & 0,27 \unit{\mol\per\litre}
 \end{tcolorbox}
 \end{answer}
+\end{frame}
+
+
+\begin{frame}[label={sec:orgb39ec2a}]{Fim da Aula}
+\begin{tikzpicture}
+\node[graduate,sword, minimum size=1cm]{ \bfseries Bons Estudos !!!!};
+\end{tikzpicture}
+\begin{center}
+\begin{tabular}{ccc}
+Download Aula & & \\%Lista de Exercícios
+\qrcode[height=2in]{https://github.com/fabinholima/AulaQuimicaPDF/blob/main/FQ/Solucoes.pdf} \\  %\qrcode[height=2in]{https://mark.nl.tab.digital/s/LQwiRJGiybMj32g}\\
+ \end{tabular}
+ \end{center}
 \end{frame}
 \end{document}
